modules/tests/_kubernetes-policy/fixtures/edge-identity/provisioning-role-excess-secret-access/resources.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: kanidm-client-secret
  namespace: gateway
rules:
- apiGroups:
  - ''
  resources:
  - secrets
  verbs:
  - create
- apiGroups:
  - ''
  resourceNames:
  - oidc-client
  resources:
  - secrets
  verbs:
  - get
  - patch
